fix styling issue where long project string causes todo ticket to overflow

--- a/src/TodoTicketsSection/TodoTicket/TodoTicket.css
+++ b/src/TodoTicketsSection/TodoTicket/TodoTicket.css
@@ -27,7 +27,7 @@
 .content >
 .top-container >
 .left-container {
-    width: calc(100% - 75px);
+    width: calc(100% - 100px);
 }
 
 .todo-ticket >
@@ -43,6 +43,10 @@
 .right-container >
 div {
     margin: 0 1rem;
+    max-width: 70px;
+    outline: none;
+    word-wrap: break-word;
+    overflow: hidden;
 }
 
 .todo-ticket > .content > .bottom-container {
@@ -89,7 +93,6 @@ div {
     outline: none;
     word-wrap: break-word;
     overflow: hidden;
-    text-overflow: ellipsis;
 }
 
 .todo-ticket .priority-display {
